# mosaico-cli-stress

./: .gitignore  README.md  pyproject.toml
src/mosaico_stress/: connection.py  main.py  utils.py
src/mosaico_stress/commands/: download.py  upload.py
